# deductive-reasoning

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  train.ipynb  train.py
lib/: chat_completions.py  inference_early_stop.py  models.py  pack.py  recipe.py  tasks.py  temporal_clue.py  tokenize.py  tune.py  types.py  utils.py
