[project]
name = "deductive-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioitertools>=0.12.0",
    "matplotlib>=3.10.1",
    "polars>=1.24.0",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchao>=0.8.0",
    "torchtune>=0.5.0",
    "vllm>=0.7.0",
    "wandb>=0.19.8",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbconvert>=7.16.6",
]
